welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:4: error: '{' expected but 'case' found.
    case"R"=> droite();avance();
    ^BDR2:5: error: '}' expected but 'case' found.
    case"L"=> gauche();avance();
    ^BDR2:6: error: '}' expected but 'case' found.
    case"I"=> droite();droite();avance();
    ^BDR2:7: error: illegal start of definition
    case"A"=> avance();
    ^BDR2:8: error: illegal start of definition
    case"B"=> avance();avance();
    ^BDR2:9: error: illegal start of definition
    case"C"=> avance();avance();avance()
    ^BDR2:10: error: illegal start of definition
    case"D"=> avance();avance();avance();avance()
    ^BDR2:11: error: illegal start of definition
    case"E"=> droite();avance();avance();avance();avance()
    ^BDR2:12: error: illegal start of definition
    case"F"=> droite();avance();avance();avance();avance();avance()
    ^BDR2:13: error: illegal start of definition
    case"Z"=> recule();
    ^BDR2:14: error: illegal start of definition
    case"Y"=> recule();recule();
    ^BDR2:15: error: illegal start of definition
    case"x"=> recule();recule();recule();
    ^BDR2:16: error: illegal start of definition
    case"w"=> recule();recule();recule();recule();
    ^BDR2:17: error: illegal start of definition
    case"V"=> recule();recule();recule();recule();recule();
    ^BDR2:18: error: illegal start of definition
    case"U"=> recule();recule();recule();recule();recule();recule();
    ^BDR2:19: error: illegal start of definition
    case _ => fini=true
    ^BDR2:23: error: eof expected but '}' found.
	}
        ^